--- a/source/form.html
+++ b/source/form.html
@@ -116,11 +116,11 @@
       height="362" alt="Карта">
   </picture>
 </section>
-<div class="footer__bottom footer__bottom">
+<div class="footer__bottom footer-bottom">
   <a href="index.html">
     <svg class="footer__logo" width="128" height="24">
       <use href="images/icons/stack.svg#footer-logo"></use>
-    </svg>
+    </svg><span class="visually-hidden">/</span>
   </a>
   <div class="footer-bottom__social social">
     <ul class="social__list">
@@ -128,18 +128,18 @@
         <a href="vk.com">
           <svg class="social__image" width="29" height="17">
             <use href="images/icons/stack.svg#vkontakte"></use>
-          </svg>
+          </svg><span class="visually-hidden">/</span>
         </a>
       </li>
       <li class="social__item"><a href="youtube.com">
         <svg class="social__image" width="24" height="18">
           <use href="images/icons/stack.svg#youtube"></use>
-        </svg>
+        </svg><span class="visually-hidden">/</span>
       </a></li>
       <li class="social__item"><a href="telegram.com">
         <svg class="social__image" width="19" height="17">
           <use href="images/icons/stack.svg#telegram"></use>
-        </svg>
+        </svg><span class="visually-hidden">/</span>
         </a></li>
     </ul>
   </div>
@@ -148,7 +148,7 @@
       <p class="htmlacademy__text">HTML Academy</p>
       <svg class="social__image" width="27" height="34">
         <use href="images/icons/stack.svg#html_academy"></use>
-      </svg>
+      </svg><span class="visually-hidden">/</span>
     </a>
   </div>
 </div>
